# coolify-expo-notification-relay

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  event-parser.js  package-lock.json  package.json  server.js
.cursor/commands/: pr-from-diff.md  release-next-version.md
.cursor/rules/: rule-priority.mdc  rust-pattern-consistency.mdc
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml
src/: event_parser.rs  lib.rs  main.rs  state.rs  utils.rs
src/endpoints/: health_check.rs  mod.rs  webhook_catch.rs
src/services/: deployment_poller.rs  expo.rs  mod.rs  repeater.rs  updater.rs
src/tests/: check_for_update_tests.rs
tests/: check_for_update_tests.rs  expo_token_tests.rs
