[package]
name = "coolify-expo-notification-relay"
version = "0.4.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
axum = "0.8.8"
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
tower = "0.5.3"
